tests/bad/read_type.kel
fn main() {
  val s: string = read_int()
  println(s)
}
